# crewai-series

./: .gitignore  1.ipynb  README.md  basic_setup.ipynb  custom_tool.ipynb  task_guardrails.ipynb
market_research_crew/: README.md
market_research_crew/src/market_research_crew/: crew.py  main.py
market_research_crew/src/market_research_crew/config/: agents.yaml  tasks.yaml
research_and_blog/: README.md  pyproject.toml
research_and_blog/blog/: blog_post.md
research_and_blog/src/research_and_blog/: crew.py  main.py
research_and_blog/src/research_and_blog/config/: agents.yaml  tasks.yaml
research_and_blog/src/research_and_blog/tools/: custom_tool.py  mcp_tools.py
