[project]
name = "research_and_blog"
version = "0.1.0"
description = "research_and_blog using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools[mcp]>=0.76.0",
    "crewai[google-genai,tools]>=1.7.1",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastmcp<2.0.0",
    "google-generativeai>=0.8.6",
]

[project.scripts]
research_and_blog = "research_and_blog.main:run"
run_crew = "research_and_blog.main:run"
train = "research_and_blog.main:train"
replay = "research_and_blog.main:replay"
test = "research_and_blog.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
